# ha-unraid

./: .devcontainer-lock.json  .devcontainer.json  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  hacs.json  pyproject.toml  pyrightconfig.json  requirements.txt
.augment/rules/: home-assistant-entity-structure.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  hardware-detection.yml  setup-help.yml
.github/agents/: copilot-instructions.md
.github/instructions/: api.instructions.md  config_flow.instructions.md  configuration_yaml.instructions.md  coordinator.instructions.md  diagnostics.instructions.md  entities.instructions.md  json.instructions.md  manifest.instructions.md  markdown.instructions.md  python.instructions.md  repairs.instructions.md  service_actions.instructions.md  services_yaml.instructions.md  tests.instructions.md  translations.instructions.md  yaml.instructions.md
.github/prompts/: Add Action.prompt.md  Add Config Option.prompt.md  Add Entity Platform.prompt.md  Add Entity to Device.prompt.md  Add New Sensor.prompt.md  Create ADR.prompt.md  Create Implementation Plan.prompt.md  Debug Coordinator Issue.prompt.md  Review Integration.prompt.md  Update Translations.prompt.md
.github/workflows/: check-api-boundary.yml  ci.yml  copilot-setup-steps.yml  dependabot-auto-merge.yml  docs.yml  hassfest.yaml  issue-triage.lock.yml  issue-triage.md  issue-triage.yml  labels.yml  release.yml  stale.yml  validate.yaml
.specify/memory/: constitution.md
custom_components/unraid/: __init__.py  api.py  binary_sensor.py  button.py  cleanup.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  sensor.py  strings.json  switch.py  update.py  websocket.py
custom_components/unraid/translations/: en.json
docs/: checklist.md
docs/development/: ARCHITECTURE.md  DECISIONS.md
script/: check  check_api_boundary.py  develop  hassfest  help  spell  spell-check  test  type-check  upgrade
script/setup/: bootstrap  sync-hacs
scripts/: develop  lint  setup  test  test_api.sh  validate  verify-fixes
specs/001-unraid-api-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-unraid-api-migration/checklists/: requirements.md
specs/001-unraid-graphql-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-unraid-graphql-integration/checklists/: full-spec-review.md  requirements.md
specs/001-unraid-graphql-integration/contracts/: mutations.graphql  queries.graphql
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_cleanup.py  test_config_flow.py  test_coordinator.py  test_coordinator_simple.py  test_diagnostics.py  test_entity.py  test_event.py  test_init.py  test_models.py  test_repairs.py  test_sensor.py  test_switch.py  test_update.py  test_websocket.py
tests/fixtures/: array.json  system_info.json
