[project]
name = "ha-unraid"
version = "2026.3.1"
description = "Home Assistant custom integration for Unraid servers"
readme = "README.md"
requires-python = ">=3.13.0"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ruaan Deysel"}
]
keywords = ["homeassistant", "unraid", "custom-integration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "homeassistant>=2026.4.2",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "unraid-api>=1.9.1",
]

[project.optional-dependencies]
dev = [
    # Linting and formatting
    "ruff==0.15.10",
    "pre-commit>=4.0.0",

    # Testing
    "pytest>=9.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "pytest-homeassistant-custom-component>=0.13.322",
    "pytest-timeout>=2.4.0",
    "syrupy>=5.0.0",

    # Type checking
    "mypy>=1.20.1",

    # Utilities
    "colorlog>=6.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["S101"]      # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=custom_components.unraid",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["custom_components/unraid"]
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.uv]
environments = ["python_full_version >= '3.14.2'"]
# Override homeassistant's exact pins to fix Dependabot security alerts:
# - PyJWT CVE (unknown crit header extensions)
# - pyOpenSSL CVE-2026-27459 (DTLS cookie buffer overflow)
# - pyOpenSSL CVE-2026-27448 (TLS connection bypass)
# - cryptography GHSA-m959-cc7f-wv43 (incomplete DNS name constraint)
# - cryptography GHSA-p423-j2cm-9vmq (buffer overflow non-contiguous buffers)
# - uv GHSA-pjjw-68hj-v9mw (arbitrary file deletion through RECORD entries)
override-dependencies = [
    "pyjwt>=2.12.1",
    "pyopenssl>=26.0.0",
    "cryptography>=46.0.7",
    "uv>=0.11.6",
]

[tool.bandit]
targets = ["custom_components/unraid"]
exclude_dirs = ["tests"]
skips = ["B101"]
